课程ui修改。。医案详情加限制

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -167,15 +167,15 @@
 						<p>直播中</p>
 						{{/if}}
 						{{if lineState == 2}}
-						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
+						<p style="width: 0.6rem;padding: 0.02rem 0;font-size: 0.2rem;">预告</p>
 						{{/if}}
 						{{if lineState == 4}}
-						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
+						<p style="width: 0.6rem;padding: 0.02rem 0;font-size: 0.2rem;">预告</p>
 						{{/if}}
 						{{if lineState == 3}}
-						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">回放</p>
+						<p style="width: 0.6rem;padding: 0.02rem 0;font-size: 0.2rem;">回放</p>
 						{{/if}}{{if lineState == 5}}
-						<p style="width: 0.6rem;height: 0.32rem;font-size: 0.2rem;">预告</p>
+						<p style="width: 0.6rem;padding: 0.02rem 0;font-size: 0.2rem;">预告</p>
 						{{/if}}
 					</li>
 				</ul>
