--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -11,6 +11,8 @@
 <meta name="keywords" content="" />
 
 <link rel="stylesheet" type="text/css" href="/xcview/css/physician/consilia.css?v=wechat_1.1.1"/>
+<link rel="stylesheet" type="text/css" href="/xcview/css/alert/sharecss.css?v=wechat_1.1.1"/>
+
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 
@@ -44,6 +46,9 @@
 	.report_btn{
 		/*opacity: 0.3;*/
 	}
+	.consilia_main{
+		margin-top: 0.88rem;
+	}
 </style>
 </head>
 <body style="background: #F8F8F8;">
@@ -69,7 +74,7 @@
 			<script type="text/html" id="consilia_main_center_id">
 			<h2>{{items.title}}</h2>
 			<div class="consilia_center">
-				<div class="consilia_textarea">{{items.content}}</div>
+				<div class="consilia_textarea"></div>
 			</div>
 			</script>
 		</div>
@@ -193,6 +198,12 @@
 		<!-- 点击分享按钮结束 -->
 	</div>
 	<!-- 中间内容结束 -->
+	<div class="quie_pic" style="padding-bottom: 0px;">
+		<img src="/xcview/images/no_comment.png">	
+		<p>还没有评价？快来抢沙发呀~</p>
+		<!-- <span onclick="btn_user_allComment()">去评价</span> -->
+	</div>
+	<div style="width:100%;height: 1.1rem;"></div>
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
