评价--ui优化课程

--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -384,7 +384,7 @@
 	<div class="wrapLittle_comment">
 		<p class="detailed_comments little_comment">详细评价</p>
 		<div class="text_write_box">
-			<textarea id="littlt_return" name="" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+			<textarea id="littlt_return" name="" rows="" cols="" placeholder=""></textarea>
 		</div>
 		<!--表情/提交评价-->
 		<ul class="brow_btn">
@@ -411,6 +411,16 @@
 				<img src="../images/xing1.png"/>
 				<span></span>
 			</div>
+			<!--节目内容好评-->
+			<div class="my_impression3 mar_bot cl">
+				<p>节目内容</p>
+				<img src="../images/face0.png"/>
+				<img src="../images/face0.png"/>
+				<img src="../images/face0.png"/>
+				<img src="../images/face0.png"/>
+				<img src="../images/face0.png"/>
+				<span></span>
+			</div>
 			<!--主播演绎好评-->
 			<div class="my_impression2 cl mar_bot">
 				<p>主播演绎</p>
@@ -421,16 +431,7 @@
 				<img src="../images/face0.png"/>
 				<span></span>
 			</div>
-			<!--节目内容好评-->
-			<div class="my_impression3 cl">
-				<p>节目内容</p>
-				<img src="../images/face0.png"/>
-				<img src="../images/face0.png"/>
-				<img src="../images/face0.png"/>
-				<img src="../images/face0.png"/>
-				<img src="../images/face0.png"/>
-				<span></span>
-			</div>
+			
 			<!--标签-->
 			<ul class="select_lable">
 				<li value="1">很赞</li>
@@ -442,7 +443,7 @@
 			<p class="detailed_comments">详细评价</p>
 			{{/if}}
 			<div class="text_write_box">
-				<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+				<textarea name="" id="comment_detailed" rows="" cols="" placeholder=""></textarea>
 			</div>
 			<!--表情/提交评价-->
 			<ul class="brow_btn">
