--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -413,7 +413,7 @@
 		<div class="wrapLittle_comment">
 			<p class="detailed_comments little_comment">详细评价</p>
 			<div class="text_write_box">
-				<textarea id="littlt_return" name="" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+				<textarea id="littlt_return" name="" rows="" cols="" placeholder=""></textarea>
 			</div>
 			<!--表情/提交评价-->
 			<ul class="brow_btn">
@@ -429,7 +429,7 @@
 		<div class="wrapAll_comment">
 			<p class="set_title">发布评价</p>
 			<div class="text_write_box">
-				<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+				<textarea name="" id="comment_detailed" rows="" cols="" placeholder=""></textarea>
 			</div>
 			<!--表情/提交评价-->
 			<ul class="brow_btn">
