--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -383,6 +383,16 @@
 			<img src="../images/xing1.png"/>
 			<span></span>
 		</div>
+		<!--节目内容好评-->
+		<div class="my_impression3 cl" style="padding-bottom: 0.3rem;overflow: hidden;">
+			<p>节目内容</p>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<img src="../images/face0.png"/>
+			<span></span>
+		</div>
 	<!--主播演绎好评-->
 		<div class="my_impression2 cl mar_bot">
 			<p>主播演绎</p>
@@ -393,16 +403,7 @@
 			<img src="../images/face0.png"/>
 			<span></span>
 		</div>
-	<!--节目内容好评-->
-		<div class="my_impression3 cl">
-			<p>节目内容</p>
-			<img src="../images/face0.png"/>
-			<img src="../images/face0.png"/>
-			<img src="../images/face0.png"/>
-			<img src="../images/face0.png"/>
-			<img src="../images/face0.png"/>
-			<span></span>
-		</div>
+	
 		<!--标签-->
 		<ul class="select_lable">
 			<li value="1">很赞</li>
@@ -414,7 +415,7 @@
 		<p class="detailed_comments">详细评价</p>
 		{{/if}}
 		<div class="text_write_box">
-			<textarea name="" id="comment_detailed"   rows="" cols="" placeholder="写评价，给主播评价一下"></textarea>
+			<textarea name="" id="comment_detailed"   rows="" cols="" placeholder=""></textarea>
 		</div>
 		<!--表情/提交评价-->
 		<ul class="brow_btn">
