--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -209,6 +209,15 @@
 		height: 40px;
 		line-height: 40px;
 	}
+	/*隐藏掉表情包后的处理*/
+	.article_main{
+		margin-left: 0;
+	    width: 6.15rem;
+	}
+	#form_article{
+		margin-left: 0;
+	    width: 6.15rem;
+	}
 </style>
 
 </head>
@@ -509,10 +518,10 @@
 
 
 		<!-- 删除样式开始 -->
-			<div class="remove">
+			<!-- <div class="remove">
 				<div class="remove_bg"></div>
 				<div class=""></div>
-			</div>
+			</div> -->
 		<!-- 删除样式结束 -->
 	</div>
 	<!-- 中间内容结束 -->
@@ -926,10 +935,11 @@
 	<div class="comment">
 		<div class="comment_bg"></div>
 		<div class="comment_main">
-			<img src="/xcview/images/face.png" alt="" class="face" />
+			<!-- <img src="/xcview/images/face.png" alt="" class="face" /> -->
 			<!-- <textarea id="form_article" contenteditable="true" onkeydown="myInput.listen(this, event);"></textarea> -->
-			<textarea id="form_article" contenteditable="true" onkeydown="myInput.listen(this, event);"></textarea>
+			<textarea id="form_article" contenteditable="true" onkeydown="myInput.listen(this, event);" placeholder=""></textarea>
 			<div class="article_main">说点什么...</div>
+			<!-- <div class="article_mains">回复：</div> -->
 			<h3 onclick="sendComment()">发送</h3>
 		</div>
 	</div>
