学堂ui--评价优化。文章添加到头部距离

--- a/wechat/src/main/webapp/xcview/html/all_comment.html
+++ b/wechat/src/main/webapp/xcview/html/all_comment.html
@@ -240,7 +240,7 @@
 	
 	<div class="wrapAll_comment">
 		<script type="text/html" id="id_show_xingxing">
-			<p class="set_title">发布评价</p>
+			<p class="set_title">发表评价</p>
 			{{if items==1}}
 		<!--星星五星好评-->
 		<div class="my_impression1 cl mar_bot">
