--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -175,7 +175,7 @@
 
 		<!-- 评价信息 -->
 		<div class="bg_modal"></div>
-		<div class="wrapAll_comment"><p class="set_title" >发布评价</p>
+		<div class="wrapAll_comment"><p class="set_title" >发表评价</p>
 			
 		<div class="text_write_box">
 			<textarea name="" id="comment_detailed" rows="" cols="" placeholder="写评价，给医案评价一下"></textarea>
