--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -24,6 +24,15 @@
 	    }
 	}	
 </script>
+<style>
+	.consilia_main{
+		/*margin-top: 0.88rem;*/
+	}
+	.opacity_heights{
+		width: 100%;
+		height: 0.88rem;
+	}
+</style>
 </head>
 <body style="background: #F8F8F8;">
 	<!--头部开始-->
@@ -40,7 +49,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="opacity_height"></div>
+	<div class="opacity_heights" style="display: block !important;"></div>
 	<!--头部结束-->
 	<!-- 中间内容开始 -->
 	<div class="consilia_main">
