--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -224,10 +224,17 @@
 <body style="background: #F8F8F8;">
 	<div class="physicians_page_main comment_hide">
 		
+		
+
+		<!-- 轮播开始 -->
+		<!--顶部轮播-->
+		<div class="top_details">
+			<script type="text/html" id="top_details">
+
 		<!-- 头部开始 -->
 		<div class="wrap-header" id="header">
 			<div class="header">		
-				<p>我是医师名字</p>
+				<p>{{items.lecturerInfo.name}}</p>
 				<div class="arror_return" onclick="javascript:history.back(-1);" >
 					<img src="/xcview/images/anchorj.png"/>
 				</div>
@@ -237,11 +244,6 @@
 			</div>
 		</div>
 		<!-- 头部结束 -->
-
-		<!-- 轮播开始 -->
-		<!--顶部轮播-->
-		<div class="top_details">
-			<script type="text/html" id="top_details">
 		<div class="swiper-container top_swiper" >
 			<div class="swiper-wrapper">
 				{{each items.banners as item i}}
@@ -263,7 +265,7 @@
 			<div class="message">
 				<div class="message_name">
 					<div class="name">{{items.lecturerInfo.name}}</div>
-					<div class="name" style="font-size: 0.24rem;color: #999999;">{{items.lecturerInfo.title}}</div>
+					<div class="name" style="font-size: 0.24rem;color: #999999;margin-top: 0.06rem;">{{items.lecturerInfo.title}}</div>
 					<!--<div class="message_characteristic">我的师傅</div>-->
 					<div class="both"></div>
 				</div>
