--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -421,7 +421,7 @@
 						<div class="course_nav_cen_size">{{item.startTime}}</div>
 						{{/if}}
 						{{if item.courseType==4}}
-						<div class="course_nav_cen_size">{{item.courseAddress}}</div>
+						<div class="course_nav_cen_size"><img src="/xcview/images/location_four.png" style="width: 0.19rem;height: 0.24rem;float: left;margin-right: 0.1rem; margin-top: 0.06rem;" />{{item.courseAddress}}</div>
 						{{/if}}
 
 						<!-- <div class="course_nav_rate">免费</div> -->
