修改h5交互问题

--- a/wechat/src/main/webapp/xcview/html/purchase.html
+++ b/wechat/src/main/webapp/xcview/html/purchase.html
@@ -132,7 +132,7 @@
 	<!--<div class="footer_perch"></div>-->
 	<div class="footer">
 		<div class="footer_div" onclick="goPay()">去支付<span class="pay_xmb" id="xmb_rmb"></span><span  id="currency"></span></div>
-		<div class="footer_div_btn">进入充值页面</div>  <!--熊猫币不足的时候，去支付隐藏，显示进入充值页面-->
+		<div class="footer_div_btn">余额不足,快去充值吧！</div>  <!--熊猫币不足的时候，去支付隐藏，显示进入充值页面-->
 		<!--<ul>
 			<li class="footer_one">
 				<span>88</span>熊猫币
