--- a/wechat/src/main/webapp/xcview/html/physician/search.html
+++ b/wechat/src/main/webapp/xcview/html/physician/search.html
@@ -39,7 +39,7 @@
 	<header>
 		<div class="header">
 			<div class="header_seek"> 
-				<input type="text" name="" value="" id="header_input" />
+				<input type="text" name="" value="" autocomplete="off"  id="header_input" />
 				<span class="span">
 					<img src="/xcview/images/sousuo0.png" alt="" class="sousuo" /><!--针灸疗法-->
 				</span>
