--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -311,6 +311,10 @@
 				<div class="border" style="left: 1.04rem;"></div>
 				<div class="dynamic_opacity"></div>
 			</ul>
+			<div class="baseImagenumbers" style="display: none;">
+				<img src="/xcview/images/no_deal.png" />
+				<p>该医师暂未发布动态...</p>
+			</div>
 		</div>
 		<!-- 选项卡结束 -->
 
@@ -436,7 +440,7 @@
 				{{else if item.typeId != null && item.typeId == 8}}
 				<div class="consilia_nav_span_div">
 					<!-- 医案-->
-					<div class="consilia_nav_span comment_hide consilia_nav_span_title">
+					<div class="consilia_nav_span comment_hide">
 						{{if item.stick}}
 						<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
@@ -532,6 +536,7 @@
 				<div class=""></div>
 			</div> -->
 		<!-- 删除样式结束 -->
+		
 	</div>
 	<!-- 中间内容结束 -->
 
@@ -961,11 +966,14 @@
 	<div class="show_height" style="width:100%;height:0.25rem;display:none;"></div>
 	<div class="top_show_height" style="width:100%;height:5.2rem;display:none;"></div>
 
-
+	<!-- 添加分享 -->
 	<div class="weixin_ceng">
 		<div class="weixin_ceng_bg"></div>
 		<div class="weixin_img"><img src="/xcview/images/fenxiang1.png" data-bd-imgshare-binded="1"></div>
 	</div>
+
+	<!-- 添加默认图 -->
+
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
@@ -1393,6 +1401,10 @@ function header_click(){
     // 处理点击全部动态
     var school_heightss=$(window).height()-$(".top_show_height").height();
     $(".screen_show_bg").height(school_heightss);
+
+    // 医师默认图
+    var baseImagenumbers=$(window).height()-$(".top_show_height").height();
+    $(".baseImagenumbers").height(baseImagenumbers);
     // };
 </script>
 </html>
