修改want-anchor中图片路径

--- a/online-web/src/main/webapp/web/html/want-anchor.html
+++ b/online-web/src/main/webapp/web/html/want-anchor.html
@@ -31,7 +31,7 @@
 	<div class="wrap-bg">
 		<div class="physician-prov">
 			<div class="physician-img">
-				<img src="../images/physician-prov.png"/ alt="医师">
+				<img src="/web/images/physician-prov.png" alt="医师">
 			</div>
 			<h5>医师认证</h5>
 			<p>适合于拥有医师资格证的中医师</p>
@@ -42,7 +42,7 @@
 		</div>
 		<div class="physician-prov">
 			<div class="physician-img">
-				<img src="../images/hospital-prov.png"/ alt="医馆">
+				<img src="/web/images/hospital-prov.png" alt="医馆">
 			</div>
 			<h5>医馆认证</h5>
 			<p>适合于拥有能讲中医师的医馆</p>
@@ -55,25 +55,25 @@
 	<div class="main-bottom">		
 		<div class="mune-list">
 			<div class="mune-img">
-				<img src="../images/icon-gather.png"/ alt="聚集">
+				<img src="/web/images/icon-gather.png" alt="聚集">
 			</div>
 			<p>聚集近百万的中医学习者和爱好者</p>
 		</div>
 		<div class="mune-list">
 			<div class="mune-img">
-				<img src="../images/icon-marketing.png"/ alt="营销">
+				<img src="/web/images/icon-marketing.png" alt="营销">
 			</div>
 			<p>创新营销模式：拼团和分享等</p>
 		</div>
 		<div class="mune-list">
 			<div class="mune-img">
-				<img src="../images/icon-data.png"/ alt="数据">
+				<img src="/web/images/icon-data.png" alt="数据">
 			</div>
 			<p>数据真实透明，实时了解订单状态</p>
 		</div>
 		<div class="mune-list">
 			<div class="mune-img">
-				<img src="../images/icon-settlement.png"/ alt="结算">
+				<img src="/web/images/icon-settlement.png" alt="结算">
 			</div>
 			<p>及时结算所得</p>
 		</div>
