h5涉及到分享后的返回

--- a/wechat/src/main/webapp/xcview/html/physician/consilia.html
+++ b/wechat/src/main/webapp/xcview/html/physician/consilia.html
@@ -58,7 +58,8 @@
 			<div class="headers">
 				<p>医案</p>
 			</div>
-			<div class="arror_return" onclick="javascript:window.history.back();return false;">
+			<!-- <div class="arror_return" onclick="javascript:window.history.back();return false;"> -->
+			<div class="arror_return" onclick="common_share_back();">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<div class="header_news">
