--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -236,7 +236,8 @@
 		<div class="wrap-header" id="header">
 			<div class="header">		
 				<p>{{items.lecturerInfo.name}}</p>
-				<div class="arror_return" onclick="javascript:history.back(-1);" >
+				<!-- <div class="arror_return" onclick="javascript:history.back(-1);" >  -->
+                <div class="arror_return" onclick="common_share_back();">
 					<img src="/xcview/images/anchorj.png"/>
 				</div>
 				<div class="header_news" onclick="header_click()">
