--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -41,7 +41,8 @@
 			<div class="headers">
 				<p>文章</p>
 			</div>
-			<div class="arror_return" onclick="javascript:window.history.back();return false;">
+<!-- 			<div class="arror_return" onclick="javascript:window.history.back();return false;"> -->
+            <div class="arror_return" onclick="common_share_back();">
 				<img src="/xcview/images/back icon.png" />
 			</div>
 			<div class="header_news">
