--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -134,7 +134,11 @@
 								</ul>
 							</li>
 							<li data-menu="menu6">
-								<div class="link" data-menu="menu6" data-load="load-news"><i class="iconfont icon-ziyuan" style="font-size: 13px;top: 23px;"></i>消息</div>
+								<div class="link" style="position: relative;" data-menu="menu6" data-load="load-news">
+									<i class="iconfont icon-ziyuan" style="font-size: 13px;top: 23px;"></i>
+									消息
+									<p class="news-prompt hide"></p>
+								</div>
 								<ul class="submenu">
 									<!--<li><a href="javascript:;">认证信息</a></li>
 									<li><a href="javascript:;">主播信息</a></li>-->
