动态bug。。课程评价bug

--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -141,7 +141,7 @@
 						<img src="../images/xing5.png"/>
 					
 						{{/if}}
-						<a href="javascript:;"><span id="criticizeCountId">{{criticizeCount}}</span>评价</a>
+						<a href="javascript:;">共<span id="criticizeCountId">{{criticizeCount}}</span>条评价</a>
 						<img class="jiantou" src="../images/video_review.png"/>
 					</li>
 				</ul>
