--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -877,7 +877,7 @@
 				<div class="my_synopsis_time">
 					<ul>
 						<li class="border"></li>
-						<li>出诊医馆及时间<span>(<img src="/xcview/images/default.png" alt="" />出诊时间)</span></li>
+						<li>出诊医馆及时间<span>(<img src="/xcview/images/default.png" alt="" />为出诊)</span></li>
 					</ul>
 				</div>		
 			</div>
@@ -1317,15 +1317,15 @@ $(window).bind("scroll", function() {
 
 
 	// 判断头部有没有默认图
-	var a=$(".swiper-wrapper").html();
+	/*var a=$(".swiper-wrapper").html();
    	if(a==null||a.length==0){
-   		// alert(1111);
+   		alert(1111);
        $(".physician_img0").css("display","block");
     }else{
        $(".physician_img0").css("display","none");
-   		// alert(222);
+   		alert(222);
 
-    };
+    };*/
 
 
 	/*// 点击其他--评论显示底部评论区域
