判断关键字

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -13,7 +13,8 @@
 <!-- <link rel="stylesheet" type="text/css" href="/xcview/css/physician/index.css?v=wechat_1.1.1&version=20feeb913b"/> -->
 <link rel="stylesheet" type="text/css" href="/xcview/css/physician/physicians_page.css?v=wechat_1.1.1&version=460bed8932"/>
 <link rel="stylesheet" href="/xcview/css/physician/swiper-4.2.6.min.css" />
-<!--手机嵌入模板-->
+<link rel="stylesheet" href="/xcview/html/physician/css/demo.css" />
+	<!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
 
 <script src="/xcview/js/physician/zepto1.14.min.js"></script>
@@ -39,6 +40,9 @@
 <link href="/xcview/html/physician/css/webiaoqing.css?version=495638f506" rel="stylesheet" type="text/css">
 <script src="/xcview/html/physician/js/jquery_min.js?version=628072e721" ></script>
 <script src="/xcview/html/physician/js/webiaoqin.js?version=9f3575a6d9" ></script>
+<!-- 测试点击图片 -->
+
+<script type="text/javascript" src="/xcview/html/physician/js/amazeui.js"></script>
 
 <script>
 	// 判断横屏展示时的状态
