--- a/wechat/src/main/webapp/xcview/html/curriculum_table.html
+++ b/wechat/src/main/webapp/xcview/html/curriculum_table.html
@@ -671,7 +671,7 @@ $(".find_nav_list").on('touchmove', function (e) {
 //顶部搜索框的提示添加
 // 		var historyTip='';
 // 		var modile = localStorage.hisArr;
-// 		if(stringnull(modile)){
+// 		if(isNotBlank(modile)){
 // 			historyTip=localStorage.hisArr.split(',')
 // 			$('.header_seek').append('<span>' + historyTip[0] + '</span>');
 // 		}
