--- a/wechat/src/main/webapp/xcview/html/forget_password.html
+++ b/wechat/src/main/webapp/xcview/html/forget_password.html
@@ -93,7 +93,7 @@
 			//$('.password').show();
 			
 			var mobile = $("#mobile").val();
-			if (!stringnull(mobile)) {
+			if (!isNotBlank(mobile)) {
 				return false;
 			}
 			if (!(/^1[345678]\d{9}$/.test(mobile))) {
