--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -476,7 +476,7 @@
 window.onload = function(){
     /*function common_share_back(){
 		var back = document.referrer;
-		if(stringnull(back)){
+		if(isNotBlank(back)){
 			//window.location.href = back;
 			var u = navigator.userAgent;
 			if (u.indexOf('Android') > -1 || u.indexOf('Linux') > -1) {//安卓手机
