--- a/wechat/src/main/webapp/xcview/html/signature.html
+++ b/wechat/src/main/webapp/xcview/html/signature.html
@@ -105,7 +105,7 @@
   		    //验证名称的合法性
   		    
   			var nikeName = $("#info").val().trim();
-  			if(!stringnull(nikeName) || nikeName.length>15 || nikeName.length<2){
+  			if(!isNotBlank(nikeName) || nikeName.length>15 || nikeName.length<2){
    		     webToast("个性签名不能为空，长度只能在2-15个字符之间","middle",1500);
    		      return false;
   			}
