师承--学费修改--束脩。提交信息页--展示页底部增加，字段

--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -96,6 +96,7 @@
 		<div class="buttom opacity" data-able="1">提交报名申请</div>
 		<!-- <div class="buttom opacity" onclick="location.href ='information_registration.html'">提交报名申请</div> -->
 		<!-- <div class="buttom opacity" onclick="reportComment()">提交报名申请</div> -->
+		<div class="" style="color: #f97b49;font-size: 0.26rem;width: 6.98rem;margin: 0 auto;margin-bottom: 0.2rem;">申请通过后，会有客服与您联系~请确保您的信息准确无误，保持电话畅通~</div>
 		<div class="both"></div>
 	</div>
 	<!-- 点击性别出现弹窗开始 -->
