--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -92,8 +92,11 @@
 			<div class="both"></div>
 		</div>
 		<div class="both"></div>
+		<div class="" style="color: #f97b49;font-size: 0.26rem;width: 6.98rem;margin: 0 auto;margin-bottom: 0.2rem;">申请通过后，会有客服与您联系~请确保您的信息准确无误，保持电话畅通~</div>
 	</div>
+
 </script>
+
 </body>
 <!-- 中间内容结束 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
