--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -84,7 +84,7 @@
             <span class="hint">报名人数不受限，成为弟子需面试</span>
         </div>
         <div class="schooling">
-            <span class="schooling_size">学费</span>
+            <span class="schooling_size">束脩</span>
             <span class="number_schooling">￥{{tuition}}</span>
         </div>
         <div class="registered">
