增加课程大纲html片段

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -52,7 +52,8 @@
             <div class="special_img">
                 <img src="{{coverImg}}" alt=""/> <!-- 此图是从上一页专题图的封面图 -->
             </div>
-            <div class="intro_top" onclick="location.href='/xcview/html/apprentice/apprentice.html'">
+            <!--  <div class="intro_top" onclick="location.href='/xcview/html/apprentice/apprentice.html'">  -->
+            <div class="intro_top" onclick="common_share_back();">
                 <div class="intro_top_bg"></div>
                 <img src="/xcview/images/anchorj.png" alt=""/>
             </div>
