医案--点击展开，高度限制。添加文章摘要，标题字段

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -403,11 +403,12 @@
 						{{if item.stick}}
 						<span class="stick_img_stick"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
-							{{item.content}}
+							<span class="title">{{item.content}}</span>
 					</div>
 					<div class="article_nav_cen comment_hide">
 						<img src="{{item.articleImgPath}}" alt="" />
-						<div class="article_nav_cen_size">{{item.articleContent}}</div>
+						<div class="article_nav_cen_size">{{item.articleTitle}}</div>
+						<div class="article_nav_cen_sizes">{{item.articleContent}}</div>
 					</div>
 					<div class="both"></div>
 				</div>
