师承详情去除必须登录权限要求，优化师承相关

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -162,7 +162,7 @@
                         <div class="general_border"></div>
                         <!-- 招生简章结束 -->
                         {{if !enrolled}}
-                        <div class="apply" onclick="location.href='apply.html?merId={{id}}'">我也要报名</div>
+                        <div class="apply" onclick="apply()">我也要报名</div>
                         {{else}}
                         <div class="apply" onclick="location.href ='information_registration.html?merId={{id}}'">
                             已报名，查看报名信息
