--- a/wechat/src/main/webapp/xcview/html/outline_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/outline_fragment.html
@@ -33,6 +33,14 @@
 	    }
 	}	
 </script>
+<style>
+	.outline{
+		width: 100% !important;
+	}
+	.outline_list{
+		width: 14.954rem !important;
+	}
+</style>
 </head>
 <body style="background: #F8F8F8;">
 	<!--中间内容开始-->
