--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -98,14 +98,14 @@
 			</div>
 		</div>
 		<!--著作预览页面-->
-		<div class="common-page work-preview-page hide" id="work-preview-page">
-			<div class="common-top work-preview-top">
+		<div class="common-page work-preview-page hide" id="work-preview-page" style="height: 560px;">
+			<div class="common-top work-preview-top" style="margin-bottom: 0;">
 				<span>预览</span>
 				<a href="javascript:;" class="close_preview">
-					<img src="../images/alter-close.png" alt="关闭">
+					<img src="/web/images/alter-close.png" alt="关闭">
 				</a>
 			</div>
-			<div class="common-content">
+			<div class="common-content" style="height: 500px; overflow: hidden;overflow-y: auto;">
 				<table class="work-preview-table" border="0" cellspacing="0" cellpadding="0">
 					<tr>
 						<td>
@@ -142,14 +142,14 @@
 		</div>
 
 		<!--媒体报道预览页面-->
-		<div class="common-page hide" id="media-preview">
-			<div class="common-top media-preview-top">
+		<div class="common-page hide" id="media-preview" style="height: 560px;">
+			<div class="common-top media-preview-top" style="margin-bottom: 0;">
 				<span>预览</span>
 				<a href="javascript:;" class="close_preview">
-					<img src="../images/alter-close.png" alt="关闭">
+					<img src="/web/images/alter-close.png" alt="关闭">
 				</a>
 			</div>
-			<div class="common-content">
+			<div class="common-content" style="height: 500px; overflow: hidden; overflow-y: auto;">
 				<table class="work-preview-table" border="0" cellspacing="0" cellpadding="0">
 					<tr>
 						<td>
@@ -300,7 +300,7 @@
 										<input id="video-up" style="display: none;margin-top: 20px; float: left; color: #666666;" type="file" value="点击上传资源" name="file" style="cursor:pointer;" onchange="uploadFile()" accept=".wmv,.wm,.asf,.asx,.rm,.rmvb,.ra,.ram,.mpg,.mpeg,.mpe,.vob,.dat,.mov,.3gp,.mp4,.mp4v,.m4v,.mkv,.avi,.flv,.f4v,.mts"/>
 										<span class="saveUrl hide z" style="margin-top: 23px;"></span>
 										<span class="up-success hide z" style="margin-top: 23px;"><img style="margin: 2px 3px; float: left;" src="/web/images/right_15.png" alt="上传成功"/>资源上传成功</span>
-										<span class="againUp hide z" style="margin-top: 23px;"><img style="margin: 2px 3px; float: left;" src="/web/images/right_15.png" alt="上传成功"/>重新上传</span>
+										<span class="againUp hide z" style="margin-top: 23px;margin-left: 15px;color: #00bc12; cursor: pointer;">重新上传</span>
 									
 									</form>
 									<span class="comment-wrong video-null hide">视频不能为空！</span>
@@ -322,14 +322,14 @@
 								</div>
 								<div class="video-title-wrap">
 									<div class="video-title">
-										<span style="color: #666666;margin-right: 10px;">标题</span>
+										<span style="color: #666666;margin-right: 10px;"><span style="color: red;">*</span>标题</span>
 										<input type="" name="" id="" value="" placeholder="好的标题可以让大家更感兴趣" />
 										<span class="comment-wrong video-error hide">！标题不能为空</span>
 									</div>
 								</div>
 								<div class="video-cover-wrap">
 									<div class="video-cover">
-										<span style="vertical-align: top;color: #666666;margin-right: 10px;">封面</span>
+										<span style="vertical-align: top;color: #666666;margin-right: 10px;"><span style="color: red; float: left;">*</span>封面</span>
 										<span class="video-cover-pic" onclick="$('#video_picIpt').click()">
 											<p style="font-size: 90px;height: 100px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
 											<p style="text-align: center;color: #999;font-size: 14px;">设置上传封面</p>
@@ -443,7 +443,7 @@
 										
 									</div>
 								{{/if}}
-								<!--医案/文章-->
+								<!--医案/文章/著作-->
 								{{if item.type==4}}
 									<div class="save-consilia-wrap">
 										<a href="/headline/details/{{item.articleId}}" style="width: 100%;">
