修改医案--摘要和可编辑字段

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -451,7 +451,7 @@
 						<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
 						
-						<div class="title"><span class="stick_imgs">#医案#</span>{{item.articleContent}}</div>
+						<div class="title"><span class="stick_imgs">#医案#</span>{{item.content}}</div>
 						<div class="both"></div>
 					</div>
 					<div class="both"></div>
@@ -459,6 +459,7 @@
 					<div class="consilia_nav_cen" data-id="{{item.articleId}}" style="display: block;">
 						<img src="{{item.articleImgPath}}" alt="" />
 						<div class="consilia_nav_cen_size">{{item.articleTitle}}</div>
+						<div class="consilia_nav_cen_sizes">{{item.articleContent}}</div>
 					</div>
 					<div class="both"></div>
 				</div>
